[gd_scene load_steps=5 format=3 uid="uid://cvo6eawl7g85g"]

[ext_resource type="Texture2D" uid="uid://u5jklly0luuy" path="res://Resource/Texture/minimize.png" id="1_nkxcj"]
[ext_resource type="Script" uid="uid://sqo722r5v3pr" path="res://Scene/Element/app_header.gd" id="1_vn1fh"]
[ext_resource type="Texture2D" uid="uid://ie573cda3lda" path="res://Resource/Texture/maximize.png" id="2_vn1fh"]
[ext_resource type="Texture2D" uid="uid://bka3832xdgom5" path="res://Resource/Texture/close.png" id="3_1ymeh"]

[node name="Header" type="Control"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_vn1fh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Grabber" type="Control" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Grabber"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="LeftPadding" type="Control" parent="HBoxContainer/Grabber/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
mouse_filter = 2

[node name="AppNameLabel" type="RichTextLabel" parent="HBoxContainer/Grabber/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
text = "A tab"
vertical_alignment = 1

[node name="MinimizeButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("1_nkxcj")
flat = true
expand_icon = true

[node name="MaximizeButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("2_vn1fh")
flat = true
expand_icon = true

[node name="CloseButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
icon = ExtResource("3_1ymeh")
flat = true
expand_icon = true

[node name="RightPadding" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MaximizeButton" to="." method="_on_maximize_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
